--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <input type="submit" id="Enviar" value="Enviar">
     <input type="reset" id="Cancelar" value="Cancelar">
 </fieldset>
-    
+<a href="./questao02.html">Questão2</a>
 </body>
 </html>
