--- a/questao02.html
+++ b/questao02.html
@@ -42,5 +42,7 @@
 <br><br>
 <input type="submit" id="Enviar" value="Enviar">
     <input type="reset" id="Reset" value="Reset">
+    <br>
+    <a href="./index.html">index</a>
 </body>
 </html>
